Accesibility adjusted on the practice page: Added ARIA labels, structured headings, and fixed contrast errors

--- a/Frontend/src/components/help-section/HelpSection.css
+++ b/Frontend/src/components/help-section/HelpSection.css
@@ -12,17 +12,6 @@
   overflow: hidden;
   width: 100%;
 
-  & h2 {
-    font-size: var(--text-desktop-body-large);
-    color: var(--Color-Principal);
-  }
-
-  & h3 {
-    font-size: var(--text-desktop-small);
-    font-weight: 600;
-    color: var(--Color-Principal);
-  }
-
   & input {
     margin: 0;
     height: 28px;
@@ -33,8 +22,8 @@
 }
 
 :where(.help_secction__container) p {
-  color: var(--Color-Principal-claro);
-  font-size: var(--text-desktop-tiny);
+  color: var(--Color-Principal);
+  font-size: var(--text-desktop-small);
 }
 
 .account_info {
@@ -48,6 +37,23 @@
   & :nth-child(3) {
     margin-top: var(--gap-xs);
   }
+}
+
+
+.help_secction_tittle {
+  font-size: var(--text-desktop-subtitles-2);
+  color: var(--Color-Principal);
+}
+
+.help_section__subtittle {
+  font-size: var(--text-desktop-lead);
+  font-weight: 600;
+  color: var(--Color-principal-500);
+}
+
+.help_section__lead {
+  font-size: var(--text-desktop-body-large);
+  color: var(--Color-grey-600);
 }
 
 .moves_info {
